<resources>
    <string name="app_name">BMM4103FE</string>
    <string name="description">Mobile Programming Final Exam</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="loginUpperTextView">LOGIN</string>
    <string name="loginLowerTextView">Login</string>
    <string name="signUpUpperTextView">SIGN UP</string>
    <string name="signUpLowerTextView">Sign Up</string>

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="orTextView">or</string>

    <string name="createGroupItem">CREATE GROUP</string>
    <string name="addMembers2GroupItem">ADD MEMBERS TO GROUP</string>
    <string name="createMessageItem">CREATE MESSAGE</string>
    <string name="sendMessageItem">SEND MESSAGE</string>
    <string name="logOutItem">LOG OUT</string>

    <string name="addMembers2GroupFragment">Add Members to Group</string>
    <string name="createGroupFragment">Create Group</string>
    <string name="createMessageFragment">Create Message</string>
    <string name="sendMessageFragment">Send Message</string>

    <string name="groupNameTextView">Group Name</string>
    <string name="inputField4GroupName">Input Field for Group Name</string>
    <string name="groupIconTextView">Group Icon</string>
    <string name="groupIconImage">Group Icon Image</string>
    <string name="groupDescriptionTextView">Group Description</string>
    <string name="inputField4Description">Input Field for Group Description</string>
    <string name="createGroupButton">CREATE GROUP</string>
    <string name="deleteGroupButton">DELETE GROUP</string>
    <string name="updateGroupButton">UPDATE GROUP</string>
    <string name="groupsTextView">Groups</string>

    <string name="gImageView">Group Image View</string>
    <string name="gNameTextView">Group Name Text View</string>
    <string name="gDescriptionTextView">Group Description Text View</string>
    <string name="gPositionTextView">01</string>

    <string name="messageNameTextView">Message Name</string>
    <string name="inputField4MessageName">Input Field for Message Name</string>
    <string name="messageTextView">Message</string>
    <string name="inputField4Message">Input Field for Message</string>
    <string name="createMessageButton">CREATE MESSAGE</string>
    <string name="deleteMessageButton">DELETE MESSAGE</string>
    <string name="updateMessageButton">UPDATE MESSAGE</string>
    <string name="messagesTextView">Messages</string>

    <string name="mNameTextView">Message Name Text View</string>
    <string name="mTextView">Message Text View</string>
    <string name="mPositionTextView">01</string>

    <string name="selectedGroupTextView">Selected Group</string>
    <string name="contactsTextView">Contacts</string>
    <string name="contactTextView">Contact Text View</string>
    <string name="phoneTextView">Phone Text View</string>
    <string name="contactPositionTextView">01</string>

    <string name="selectedMessageTextView">Selected Message</string>
    <string name="sendBulkMessageButton">SEND BULK MESSAGE</string>

    <string name="numberNameSurnameTextView">201913709082 — Murat Sancak</string>
</resources>