<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bmm4103fe"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.createGroup.CreateGroupFragment">

    <TextView
        android:fontFamily="casual"
        android:id="@+id/createGroupTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:text="@string/createGroupFragment"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:fontFamily="casual"
        android:id="@+id/groupNameTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/groupNameTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGroupTextView"/>

    <EditText
        android:backgroundTint="@color/white"
        android:ems="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/inputField4GroupName"
        android:id="@+id/groupNameEditText"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_width="256dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupNameTextView"/>

    <TextView
        android:fontFamily="casual"
        android:id="@+id/groupIconTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/groupIconTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupNameEditText" />

    <ImageButton
        android:id="@+id/groupIconImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/groupIconImage"
        android:src="@drawable/ic_round_groups_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupIconTextView"/>

    <TextView
        android:fontFamily="casual"
        android:id="@+id/groupDescriptionTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/groupDescriptionTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupIconImageButton"/>

    <EditText
        android:backgroundTint="@color/white"
        android:ems="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:hint="@string/inputField4Description"
        android:id="@+id/groupDescriptionEditText"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_width="256dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDescriptionTextView"/>

    <Button
        android:backgroundTint="@color/green"
        android:fontFamily="casual"
        android:id="@+id/groupButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/createGroupButton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDescriptionEditText"/>

    <TextView
        android:fontFamily="casual"
        android:id="@+id/groupsTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/groupsTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupButton"/>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/white"
        android:id="@+id/groupsRecyclerView"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/numberNameSurnameHomeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupsTextView"/>

    <TextView
        android:fontFamily="casual"
        android:gravity="center"
        android:id="@+id/numberNameSurnameHomeTextView"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:text="@string/numberNameSurnameTextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>